// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 1`] = `
<Table
  borderless={true}
  responsiveTag="div"
  striped={true}
  tag="table"
>
  <table
    className="table table-borderless table-striped"
  >
    <thead
      id="header"
    >
      <tr>
        <th
          className="default-width"
        />
        <th
          className="default-width"
        >
          High Risk
        </th>
        <th
          className="default-width"
        >
          Low Risk
        </th>
        <th
          className="default-width"
        >
          No Risk
        </th>
        <th
          className="default-width"
        >
          Total
        </th>
      </tr>
    </thead>
    <tbody
      id="body"
    >
      <tr
        id="no-rows"
      >
        <td>
          There seems to be no rows here :-(
        </td>
      </tr>
      <tr
        key="total"
      >
        <td
          className="default-width"
          id="total"
        >
          Total(
          Province
          )
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width "
        >
          0
        </td>
        <td
          className="default-width"
        >
          0
        </td>
      </tr>
    </tbody>
  </table>
</Table>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 2`] = `
<tbody
  id="body"
>
  <tr
    id="no-rows"
  >
    <td>
      There seems to be no rows here :-(
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      District
      )
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 3`] = `
<tbody
  id="body"
>
  <tr
    id="no-rows"
  >
    <td>
      There seems to be no rows here :-(
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      Commune
      )
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 4`] = `
<tbody
  id="body"
>
  <tr
    id="no-rows"
  >
    <td>
      There seems to be no rows here :-(
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      Village
      )
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 5`] = `
<tbody
  id="body"
>
  <tr
    id="no-rows"
  >
    <td>
      There seems to be no rows here :-(
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      Commune
      )
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 6`] = `
<tbody
  id="body"
>
  <tr
    id="no-rows"
  >
    <td>
      There seems to be no rows here :-(
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      District
      )
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 7`] = `
<tbody
  id="body"
>
  <tr
    id="no-rows"
  >
    <td>
      There seems to be no rows here :-(
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      Province
      )
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 8`] = `
<tbody
  id="body"
>
  <tr
    id="no-rows"
  >
    <td>
      There seems to be no rows here :-(
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      District
      )
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
</tbody>
`;

exports[`HierarchichalDataTable renders correctly: hierarchichalDataTable 9`] = `
<tbody
  id="body"
>
  <tr
    id="no-rows"
  >
    <td>
      There seems to be no rows here :-(
    </td>
  </tr>
  <tr
    key="total"
  >
    <td
      className="default-width"
      id="total"
    >
      Total(
      Province
      )
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width "
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
  </tr>
</tbody>
`;
